--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.4",
+    "@react-oauth/google": "^0.12.1",
     "apexcharts": "3.44.0",
+    "axios": "^1.8.4",
+    "jwt-decode": "^4.0.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.17.0"
+    "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
     "@types/react": "18.2.31",
