--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@heroicons/react": "2.0.18",
-    "@material-tailwind/react": "2.1.4",
+    "@material-tailwind/react": "^2.1.10",
+    "@react-leaflet/core": "^2.1.0",
     "@react-oauth/google": "^0.12.1",
     "apexcharts": "3.44.0",
     "axios": "^1.8.4",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
